build: 빌드 작업을 병렬로 수행
 - 테스트를 제외한 작업을 병렬로 수행
 - 테스트 작업은 한 모듈씩 수행하도록 Mutex 로 설정

Signed-off-by: Sunghyouk Bae <sunghyouk.bae@gmail.com>